# evo-predict-agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: evomate-claude-inject.sh
.codex/: hooks.json
.codex/hooks/: evomate-codex-inject.sh
apps/android/: README.md  settings.gradle
apps/android/app/: build.gradle
apps/api/: package.json
apps/api/src/: evomap-llm.ts  remote-jobs.ts  server.ts  trained-models.ts
apps/browser-extension/: README.md  manifest.json  package.json
apps/browser-extension/scripts/: validate.mjs
apps/browser-extension/src/: background.js  content-script.js  popup.css  popup.html  popup.js
apps/desktop/: README.md  package.json
apps/web/: next.config.mjs
deploy/cloud-run/: deploy-api.sh  deploy-web.sh
docs/: EVOMATE_ARCHITECTURE.md  EVOMATE_CODEX_VENDOR.md  EVOMATE_DESKTOP.md  EVOMATE_HOOK_INTEGRATION.md  EVOMATE_HOOK_PROTOCOL.md  EVOMATE_LOCAL_AGENT.md  EVOMATE_ML_POLICY.md  EVOMATE_SEMANTIC_ARCHITECTURE.md  REMOTE_COMPUTE_DISTRIBUTION.md
evo_predict_agent/: assets.py  capability.py  cli.py  evomap_gep.py  hash_utils.py  memory.py  pre_evolver.py  predictor.py  remote_worker.py  signals.py
evo_predict_agent/training/: __init__.py  build_dataset.py  build_embeddings.py  evolution_gym.py  pipeline.py  preference_model.py  train_policy.py  train_preference.py
examples/: sample_history.jsonl
scripts/: gep_bridge.mjs
tests/: test_capability.py  test_predictor.py  test_training_pipeline.py
(+19 files in other folders)
