[project]
name = "evo-predict-agent"
version = "0.1.0"
description = "Privacy-first predictive self-evolving agent inspired by AutoML experiment loops and EvoMap GEP assets."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
evo-predict = "evo_predict_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
